--- a/Experiments/exp1.ipynb
+++ b/Experiments/exp1.ipynb
@@ -206,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -259,10 +259,16 @@
         "        policy = Policy(model)\n",
         "        \n",
         "        sampler = make_ppo_sampler(env_curr, policy, num_minibatches=num_minibatches)\n",
-        "        optimizer = torch.optim.Adam(policy.model.parameters(), lr=3e-4, eps=1e-5)\n",
+        "        optimiczer = torch.optim.Adam(policy.model.parameters(), lr=3e-4, eps=1e-5)\n",
         "        rescale_adam(optimizer=optimizer, C=num_default_minibatches / num_minibatches)\n",
         "        \n",
-        "        ppo = algo(policy, optimizer)\n",
+        "        if algo is DecoupledPPO:\n",
+        "            C = num_default_minibatches / num_minibatches\n",
+        "            beta_ewma = 0.99\n",
+        "            beta_ewma = 1 - (1 / (1 + (C * beta_ewma) / (1 - beta_ewma))) \n",
+        "            ppo = algo(policy, optimizer, beta_ewma=beta_ewma)\n",
+        "        else:\n",
+        "            ppo = algo(policy, optimizer)\n",
         "        lr_mult = lambda epoch: (1 - (epoch / 150000))\n",
         "        sched = torch.optim.lr_scheduler.LambdaLR(optimizer, lr_mult)\n",
         "        \n",
