--- a/ppo.ipynb
+++ b/ppo.ipynb
@@ -6,7 +6,15 @@
       "metadata": {
         "id": "j9dfWABRNCVm"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "bash: ../xvfb: No such file or directory\n"
+          ]
+        }
+      ],
       "source": [
         "import sys, os\n",
         "if 'google.colab' in sys.modules and not os.path.exists('.setup_complete'):\n",
@@ -1330,7 +1338,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.21"
+      "version": "3.9.6"
     }
   },
   "nbformat": 4,
